--- a/src/components/Hello/Hello.module.css
+++ b/src/components/Hello/Hello.module.css
@@ -1,4 +1,4 @@
 .container {
-    background-color: var(--main-color);
-    color: var(--secondary-color);
+    background-color: var(--dark-blue-2);
+    color: var(--white);
 }
