--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,4 +1,8 @@
 :root {
-    --main-color: #626262;
-    --secondary-color: #123456;
+    --dark-blue-1: hsl(209, 23%, 22%);
+    --dark-blue-2: hsl(207, 26%, 17%);
+    --darl-blue-3: hsl(200, 15%, 8%);
+    --dark-gray: hsl(0, 0%, 52%);
+    --light-gray: hsl(0, 0%, 98%);
+    --white: hsl(0, 0%, 100%);
 }
