feat: finish up styling Card component

--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -3,11 +3,18 @@
     flex-direction: column;
     font-size: 14px;
     color: var(--white);
+    background-color: var(--dark-blue-1);
+    border-radius: 5px;
+    box-sizing: border-box;
 }
 
 .textContainer {
     padding: 20px;
-    background-color: var(--dark-blue-1)
+}
+
+.flag {
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
 }
 
 h2 {
