--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -3,4 +3,9 @@
     flex-direction: column;
     cursor: pointer;
     user-select: none;
+    border: 1px solid var(--light-gray);
+    padding: var(--paddingBase) calc(var(--paddingBase) * 2);
+    border-radius: var(--radiusBase);
+    box-shadow: 1px 1px 10px var(--medium-gray);
+    margin: var(--paddingBase);
 }
