feat: support width property inside select context so options receive same width as Select component

--- a/src/components/Select/Option.module.css
+++ b/src/components/Select/Option.module.css
@@ -1,6 +1,7 @@
 .container {
     cursor: pointer;
     padding: var(--paddingBase) calc(var(--paddingBase) * 1.2);
+    user-select: none;
 }
 
 .container:hover {
