feat: add styling for selected option

--- a/src/components/Select/Option.module.css
+++ b/src/components/Select/Option.module.css
@@ -7,3 +7,9 @@
 .container:hover {
     background-color: var(--medium-gray);
 }
+
+.selected,
+.selected:hover {
+    color: var(--white);
+    background-color: var(--dark-blue-1);
+}
