refactor: add box sizing property for all elements

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -11,6 +11,11 @@
 html {
     line-height: 1.15; /* 1 */
     -webkit-text-size-adjust: 100%; /* 2 */
+    box-sizing: border-box;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
 }
 
 /* Sections
@@ -52,7 +57,6 @@ h1 {
  */
 
 hr {
-    box-sizing: content-box; /* 1 */
     height: 0; /* 1 */
     overflow: visible; /* 2 */
 }
@@ -239,7 +243,6 @@ fieldset {
  */
 
 legend {
-    box-sizing: border-box; /* 1 */
     color: inherit; /* 2 */
     display: table; /* 1 */
     max-width: 100%; /* 1 */
