refactor: flag list layout

--- a/src/components/CountryCardList/CountryCardList.module.css
+++ b/src/components/CountryCardList/CountryCardList.module.css
@@ -1,8 +1,16 @@
 .container {
     display: flex;
-    gap: 10px;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    column-gap: 1%;
+    row-gap: 10px;
 }
 
 .item {
-    flex-basis: 25%;
+    flex-basis: 24%;
+    height: 100%;
+}
+
+.cardContainer {
+    height: 100%;
 }
