--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     padding: 20px 0;
-    border-bottom: 5px solid var(--light-gray);
+    box-shadow: var(--shadowBase-light);
 }
 
 .contentContainer {
