--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -14,6 +14,12 @@ html {
     box-sizing: border-box;
 }
 
+html,
+body,
+#root {
+    height: 100%;
+}
+
 *, *::before, *::after {
     box-sizing: inherit;
 }
