--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -1,7 +1,12 @@
 .container {
-    border: 1px solid var(--light-gray);
+    border: 2px solid var(--light-gray);
     padding: var(--paddingBase) calc(var(--paddingBase) * 1.2);
     border-radius: var(--radiusBase);
     box-shadow: var(--shadowBase-light);
     width: 100%;
+    outline: 0;
+}
+
+.container:focus {
+    border: 2px solid var(--dark-blue-1);
 }
