--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -9,10 +9,14 @@
     flex-direction: column;
     cursor: pointer;
     user-select: none;
-    border: 1px solid var(--light-gray);
+    border: 2px solid var(--light-gray);
     padding: var(--paddingBase) calc(var(--paddingBase) * 1.2);
     border-radius: var(--radiusBase);
     box-shadow: var(--shadowBase-light);
+}
+
+.active {
+    border: 2px solid var(--dark-blue-1);
 }
 
 .optionsContainer {
