feat: added icon to Select component

--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -7,12 +7,20 @@
     position: relative;
     display: inline-flex;
     flex-direction: column;
+    color: var(--dark-gray);
     cursor: pointer;
     user-select: none;
     border: 2px solid var(--light-gray);
     padding: var(--paddingBase) calc(var(--paddingBase) * 1.2);
     border-radius: var(--radiusBase);
     box-shadow: var(--shadowBase-light);
+}
+
+.icon {
+    position: absolute;
+    right: var(--paddingBase);
+    top: calc(50% - (16px / 2));
+    color: var(--dark-gray);
 }
 
 .active {
