feat: added selected and open state styles to Select component

--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -23,6 +23,10 @@
     color: var(--dark-gray);
 }
 
+.selected {
+    color: var(--dark-blue-1);
+}
+
 .active {
     border: 2px solid var(--dark-blue-1);
 }
