feat: added responsive css for country list

--- a/src/components/CountryCardList/CountryCardList.module.css
+++ b/src/components/CountryCardList/CountryCardList.module.css
@@ -14,3 +14,21 @@
 .cardContainer {
     height: 100%;
 }
+
+@media screen and (max-width: 960px) {
+    .item {
+        flex-basis: 31%;
+    }
+}
+
+@media screen and (max-width: 720px) {
+    .item {
+        flex-basis: 48%;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .item {
+        flex-basis: 100%;
+    }
+}
