--- a/src/components/CountryCard/CountryCard.module.css
+++ b/src/components/CountryCard/CountryCard.module.css
@@ -8,9 +8,14 @@
     box-sizing: border-box;
     box-shadow: var(--shadowBase-light);
     width: 100%;
+    height: 100%;
 }
 
 .textContainer {
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    justify-content: space-between;
     padding: 20px;
 }
 
