--- a/src/components/CountryCard/CountryCard.module.css
+++ b/src/components/CountryCard/CountryCard.module.css
@@ -9,6 +9,13 @@
     box-shadow: var(--shadowBase-light);
     width: 100%;
     height: 100%;
+    border: 2px solid transparent;
+    cursor: pointer;
+    transition: border-color .2s;
+}
+
+.container:hover {
+    border: 2px solid var(--dark-blue-1);
 }
 
 .textContainer {
