--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
     --dark-blue-1: hsl(209, 23%, 22%);
     --dark-blue-2: hsl(207, 26%, 17%);
-    --darl-blue-3: hsl(200, 15%, 8%);
+    --dark-blue-3: hsl(200, 15%, 8%);
     --dark-gray: hsl(0, 0%, 52%);
      --medium-gray: hsl(0, 0%, 85%);
     --light-gray: hsl(0, 0%, 98%);
