--- a/src/components/Search/Search.module.css
+++ b/src/components/Search/Search.module.css
@@ -12,6 +12,10 @@
     color: var(--dark-blue-1);
 }
 
+.inputContainer:hover {
+    border: 2px solid var(--medium-gray);
+}
+
 .inputContainer::placeholder {
     color: var(--dark-gray)
 }
