--- a/src/pages/Country/Country.module.css
+++ b/src/pages/Country/Country.module.css
@@ -1,3 +1,24 @@
 .backButton {
     padding: 50px 0;
 }
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.flagContainer,
+.contentContainer {
+    width: 45%;
+}
+
+.contentContainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.contentInnerContainer {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+}
