--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -55,6 +55,11 @@ h1 {
     margin: 0.67em 0;
 }
 
+h2 {
+    font-size: 1.6em;
+    font-weight: bold;
+}
+
 /* Grouping content
    ========================================================================== */
 
